Added rev1 to revision history of requirements

--- a/Doc/Requirements/Requirements.tex
+++ b/Doc/Requirements/Requirements.tex
@@ -82,6 +82,7 @@
    Oct 29/2018 & 1 & Functional Requirements Added & All authors\\ \hline
    Oct 30/2018 & 2 & Other sections added & All authors\\ \hline
    Oct 31/2018 & 3 & Final draft for Requirements Deadline & All authors\\ \hline
+   Mar 6 /2019 & 4 & Revision 1 & All authors\\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
