Rev 0 of hazard analysis wasn't committed for some reason
So I added it

--- a/Doc/Hazard Analysis/Hazard Analysis.tex
+++ b/Doc/Hazard Analysis/Hazard Analysis.tex
@@ -20,7 +20,6 @@
 
 \begin{document}
 
-
 \begin{titlepage}
 	\newcommand{\HRule}{\rule{\linewidth}{0.2mm}}
 	\begin{center}
@@ -37,6 +36,9 @@
 		\begin{flushleft} \large
 			\emph{Authors:}\\
 			Victor Velechovsky - \textit{001305263} \\
+			Amandeep Panesar - \textit{001431191} \\ 
+			Nishanth Balamohan - \textit{001411319}\\
+			Gabriel Potter - \textit{001429884}\\
 		\end{flushleft}
 	\end{minipage}
 	~
@@ -63,11 +65,7 @@
    \noindent\begin{tabularx}{\textwidth}{| >{\centering\arraybackslash}m{0.2\textwidth} | >{\centering\arraybackslash}m{0.2\textwidth} | >{\centering\arraybackslash}m{0.2\textwidth} | >{\centering\arraybackslash}m{0.285\textwidth} |}
    \hline
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\ \hline
-   Dec 29, 2017 & 1.0 & Main content done for all sections & Christopher McDonald \\ \hline
-   Jan 1, 2018 & 1.1 & Edited document & Sharon Platkin \\ \hline
-   Jan 3, 2018 & 1.2 & Edited document & Jared Rayner \\ \hline
-   Mar 4, 2018 & 1.3 & Revised  Figures& Christopher McDonald \\ \hline
-   Mar 5, 2018 & 1.4 & Edited scope & Sharon Platkin \\ \hline
+   Jan 18, 2017 & 1.0 & All content added & All Authors \\hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -89,7 +87,7 @@ remains a possibility of other hazards emerging that we did not predict.
 
 Each hazard will contain: a description, a fault tree, and a mitigation plan. This will all discussed
 within the system boundary, which is defined in the section \textit{Scope & Boundary}.
-
+ 
 \subsection{Naming Conventions and Terminology}
 \label{sec:definitions}
 The following terms and definitions will be used throughout this document:
@@ -121,38 +119,6 @@ a data storage component to store measurement data, and a G.U.I. to interact wit
 
 The design of the system is covered in detail in the \textit{System Design} document.
 
-\subsection{Scope \& Boundary}
-The hazards outlined below will cover the hardware, electrical and software aspects of the SmartServe system. \\ \\
-Intentional misuse or destruction of the system will not be discussed as it is outside the scope of this document. The user is assumed to be using fully-functioning and maintained equipment including the table tennis balls, table and paddles. 
-
-\section{Hazards}
-The hazards outlined here can be categorized into 2 main categories: system and project. System hazards damage the user or the assets of the system where project hazards damage the integrity of the project and its success. The list of each can be found in Table \ref{table:hazard}. \\
-\begin{table}[H]
-\centering
-\caption{Categorization of Hazards}
-\label{table:hazard}
-\begin{tabular}{ | >{\raggedright\arraybackslash}p{0.5\textwidth} | >{\raggedright\arraybackslash}p{0.5\textwidth} | }
-\hline
-\multicolumn{2}{|c|}{\textbf{Hazards}} \\ \hline
-\textbf{System}   & \textbf{Project}   \\ \hline
-\begin{itemize}
-\item User is struck by an air-borne ball
-\item User is caught in a Pinch Point
-\item Electric Shock
-\item User's appendage is caught in machine
-\item Machine overheats
-\item Machine's traversal is blocked
-\end{itemize}
-&
-\begin{itemize}
-\item CV frame rate is too low for accurate reading
-\item Shooting Mechanism shoots inaccurately
-\end{itemize}
-\\ \hline
-\end{tabular}
-\end{table}
-
-
 \subsection{Financial Losses}
 \subsubsection*{Description}
 Financial losses could occur either when an insect is damaged or lost, or when an insect causes
@@ -165,40 +131,42 @@ If an insect collides with another insect, or with something in the external wor
 caused to either the insect(s) or the external world.
 \subsubsection*{Mitigation Plan}
 \textit{Clear Coverage Area}: HydroSwarm should only be used in a body of water that has no
-lifeforms or other fragile objects to minimize the risk of collisions. This includes, for example,
+lifeforms or other fragile objects, to minimize the risk of collisions. This includes, for example,
 small branches floating in the water, which could cause problems for the movement of insects.
+Ensuring a clear coverage area prior to use is recommended to minimize the risk of collision.
 
 \textit{Double Check the Coverage Area}: It is important for the proper functionality of HydroSwarm
-that the coverage area is defined accurately. 
+that the coverage area is defined accurately, otherwise insects could travel out of bounds,
+collide with other insects, or provide measurements that aren't spatially accurate. Ensuring
+that the coverage area is properly defined will mitigate such errors.
 
 \textit{Limit Movement Speed}: The maximum speed of the boats can be limited by limiting the voltage
 sent to the motors, which could lessen the severity of collisions if they do happen. For development
 purposes, velocities of the insects will be limited to 1 m/s.
+
 \subsubsection*{Fault Tree}
 \begin{figure}[H]
    \centering
-   \includegraphics[width=0.7\textwidth]{diagram/fault-tree-financial-loss.png} % requires the graphicx package
-   \caption{Fault Analysis Tree for \textit{User is struck by an air-borne ball}}
+   \includegraphics[width=1\textwidth]{Diagrams/Fault Tree - Financial Loss.png} % requires the graphicx package
+   \caption{Fault Analysis Tree for \textit{Financial Loss}}
    \label{fig:ft-Air}
 \end{figure}
 
-\subsection{Bad Policy Decisions Made}
+\subsection{Misinformed Policy Decisions}
 \subsubsection*{Description}
 HydroSwarm's measurement data can be used by experts in various fields of study, to inform
 policy decisions in the corporate, academic, or political spheres. This, of course, relies on
 the assumption of accurate data, so an 'invisible' malfunction in HydroSwarm could lead to
-malinformed decision making.
+misinformed decision making.
 \subsubsection*{Mitigation Plan}
 \textit{Cross reference results with a physical model.} In some situations it is possible to
 approximate the results of HydroSwarm using a physical model. If there is a large discrepency
 between the model and swarm, then further investigation is required to ensure the accuracy of
 HydroSwarm.
 
-
 \textit{Cross reference results with a second measurement source.} When available, cross referencing
 HydroSwarm with another water temperature measuring device is extremely helpful in validating
 the accuracy of the system.
-
 
 \textit{Routinely test the system in known conditions.} If the user has available a body of water
 with a known temperature map, the system should be routinely tested in it to validate the
@@ -207,9 +175,76 @@ of these measurements should be validated, not simply the temperature measuremen
 \subsubsection*{Fault Tree}
 \begin{figure}[H]
    \centering
-   \includegraphics[width=0.7\textwidth]{img/ft-Air.png} % requires the graphicx package
-   \caption{Fault Analysis Tree for \textit{User is struck by an air-borne ball}}
+   \includegraphics[width=1\textwidth]{Diagrams/Faul Tree - Bad Policy Decision.png} % requires the graphicx package
+   \caption{Fault Analysis Tree for \textit{Misinformed Policy Decisions}}
    \label{fig:ft-Air}
+\end{figure}
+
+\subsection{Bodily Injury}
+\subsubsection*{Description}
+Bodily injury may occur during the process of deploying the insect or during the actual survey. One point where bodily injury may occur is when handling the onboard battery on the insect. The improper handling of the battery may lead to a fire and has the potential to seriously harm someone. Injury may also occur when deploying the insect before placing it in the body of water. The propellers on the insect operate at a high R.P.M. and can lead to injury such as cuts on the hand.
+
+\subsubsection*{Mitigation Plan}
+\textit{Overcharge Protection:} The on board battery should be charged for a maximum of three hours.
+
+\textit{Confirm Boat Is In Water:} Double check that the boat is in the water before proceeding to run the survey. 
+
+\subsubsection*{Fault Tree}
+\begin{figure}[H]
+   \centering
+   \includegraphics[width=1\textwidth]{Diagrams/FTA-injury.png} % requires the graphicx package
+   \caption{Fault Analysis Tree for \textit{Bodily Injury}}
+   \label{fig:ft-Air}
+\end{figure}
+
+\subsection{Environmental Damage and Habitat Disruption}
+\subsubsection*{Description}
+Damage to the environment may occur during operation of this device. The following events have the potential to cause environmental damage:
+\begin{itemize}
+\item Battery leakage
+\item Debris from loose components
+\end{itemize}
+In addition, the following events have the potential to cause habitat disruption:
+\begin{itemize}
+\item Excessive motor noise
+\item Excessive water churn
+\item Destruction of plant material
+\end{itemize}
+
+\subsubsection*{Mitigation Plan}
+\textit{Secure components:} All components must be reasonably secure to the device to prevent pollution caused by loose part debris. \\
+\textit{Shallow motor depth:} Motors will be located close to the surface to prevent damage to aquatic plant life growing on the bottom. \\
+\textit{Small profile:} The boat will have a relatively small profile, minimizing water churn and eliminating the need for large motors that may generate excessive noise. \\
+\textit{Waterproofing:} All electronic components including the battery compartment will be airtight and sealed. This will prevent a ruptured battery from leaking into the water.
+
+\subsubsection*{Fault Tree}
+\begin{figure}[H]
+   \centering
+   \includegraphics[width=1\textwidth]{Diagrams/environmental_hazard_fta.png}
+   \caption{Fault Analysis Tree for \textit{Environmental Damage and Habitat Disruption}}
+   \label{fig:ft-Environment}
+\end{figure}
+
+\subsection{Loss of Time}
+\subsubsection*{Description}
+There are many ways that the user's time can be used up during the operation of the swarm. 
+\begin{itemize}
+\item Insect retrieval from lake
+\item Delayed component delivery time
+\item Damaged insect requiring repair
+\end{itemize}
+
+\subsubsection*{Mitigation Plan}
+\textit{Insect Start Point:} Prepare a system where in the case of a damaged insect, it is able to be manually driven to a start point. \\
+\textit{Order Early:} Order the components as early as possible and anticipate faulty parts when ordering. \\
+\textit{Modular components:} All components must be operational individually, they will be tested to validate its functionality. When integrated with other units there will be a decreased chance of damage to the components. The components will also be integration tested to make sure the components function together. \\
+
+\subsubsection*{Fault Tree}
+\begin{figure}[H]
+   \centering
+   \includegraphics[width=1\textwidth]{Diagrams/Fault Tree - Time Loss.png}
+   \caption{Fault Analysis Tree for \textit{Loss of Time}}
+   \label{fig:ft-Time}
 \end{figure}
 
 \end{document}
