Updates to requirements rev 1

--- a/Doc/Requirements/Requirements.tex
+++ b/Doc/Requirements/Requirements.tex
@@ -200,7 +200,7 @@ McMaster University - specifically, the Department of Computing and Software - i
 Due to time and financial constraints, defining the project's scope is essential to ensure the project is feasible. One way to ensure the project remains in scope is to restrict the area of the survey. Insects can travel only a maximum distance (approximately covering the size of a swimming pool) from the starting point. The test environment will also be level and free from obstructions. We will take advantage of third-party chassis systems, and will not be building our own. We will also rely on other third-party components, such as embedded micro-controllers and transceivers.
 
 \subsection{Sensor Choice}
-Another way we will reduce the scope of the project is the type of data we collect with each insect. While this system could be used with a multitude of measurement types, for this prototype we will limit our integration efforts to just two types. We have chosen to focus on temperature and humidity measurements for the following reasons:
+Another way we will reduce the scope of the project is by limiting the type of data we collect with each insect. While this system could be used with a multitude of measurement types, for this prototype we will limit our integration efforts to just two types. We have chosen to focus on temperature and humidity measurements for the following reasons:
 
 \begin{itemize}
     \item Transmitting temperature/humidity information is akin to transmitting any other type of measurement -- the main control unit can be designed without regard for the type of data being collected
